# hvat

./: .dockerignore  .gitignore  .releaserc  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
hvat/: config.py  errors.py  initialization.py  main.py  stdout.py
tests/: config_hcp.yaml  config_stdout.yaml  test_stdout.py
tests/integration/: test_init_stdout.py
tests/unit/: test_config.py  test_initialization.py  test_stdout.py
